versioned_docs/version-2.5/reference/subsystems/pytest.mdx
---
title: pytest
description: |
  The pytest Python test framework (https://docs.pytest.org/).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The pytest Python test framework (https://docs.pytest.org/).

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[pytest]`</span>

<span className={styles.options}>

## Basic options

### `args`

<Option
  cli_repr={`--pytest-args="[<shell_str>, <shell_str>, ...]", ... -- [<shell_str> [<shell_str> [...]]]`}
  env_repr='PANTS_PYTEST_ARGS'
  toml_repr={`[pytest]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to Pytest, e.g. `--pytest-args="-k test_foo --quiet"`

</Option>

### `timeouts`

<Option
  cli_repr={`--[no-]pytest-timeouts`}
  env_repr='PANTS_PYTEST_TIMEOUTS'
  toml_repr={`[pytest]
timeouts = <bool>`}
  default_repr={`True`}
>

Enable test target timeouts. If timeouts are enabled then test targets with a timeout= parameter set on their target will time out after the given number of seconds if not completed. If no timeout is set, then either the default timeout is used or no timeout is configured.

</Option>

## Advanced options

### `config_discovery`

<Option
  cli_repr={`--[no-]pytest-config-discovery`}
  env_repr='PANTS_PYTEST_CONFIG_DISCOVERY'
  toml_repr={`[pytest]
config_discovery = <bool>`}
  default_repr={`True`}
>

If true, Pants will include all relevant Pytest config files (e.g. `pytest.ini`) during runs. See https://docs.pytest.org/en/stable/customize.html#finding-the-rootdir for where config files should be located for Pytest to discover them.

</Option>

### `execution_slot_var`

<Option
  cli_repr={`--pytest-execution-slot-var=<str>`}
  env_repr='PANTS_PYTEST_EXECUTION_SLOT_VAR'
  toml_repr={`[pytest]
execution_slot_var = <str>`}
  default_repr={`None`}
>

If a non-empty string, the process execution slot id (an integer) will be exposed to tests under this environment variable name.

</Option>

### `junit_family`

<Option
  cli_repr={`--pytest-junit-family=<str>`}
  env_repr='PANTS_PYTEST_JUNIT_FAMILY'
  toml_repr={`[pytest]
junit_family = <str>`}
  default_repr={`xunit2`}
>

The format of the generated XML file. See https://docs.pytest.org/en/latest/reference.html#confval-junit_family.

</Option>

### `junit_xml_dir`

<Option
  cli_repr={`--pytest-junit-xml-dir=<DIR>`}
  env_repr='PANTS_PYTEST_JUNIT_XML_DIR'
  toml_repr={`[pytest]
junit_xml_dir = <DIR>`}
  default_repr={`None`}
>

Specifying a directory causes Junit XML result files to be emitted under that dir for each test run.

</Option>

### `pytest_plugins`

<Option
  cli_repr={`--pytest-pytest-plugins="['<str>', '<str>', ...]"`}
  env_repr='PANTS_PYTEST_PYTEST_PLUGINS'
  toml_repr={`[pytest]
pytest_plugins = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "pytest-cov>=2.10.1,<2.12"\n]`}
>

Requirement strings for any plugins or additional requirements you&#x27;d like to use.

</Option>

### `timeout_default`

<Option
  cli_repr={`--pytest-timeout-default=<int>`}
  env_repr='PANTS_PYTEST_TIMEOUT_DEFAULT'
  toml_repr={`[pytest]
timeout_default = <int>`}
  default_repr={`None`}
>

The default timeout (in seconds) for a test target if the `timeout` field is not set on the target.

</Option>

### `timeout_maximum`

<Option
  cli_repr={`--pytest-timeout-maximum=<int>`}
  env_repr='PANTS_PYTEST_TIMEOUT_MAXIMUM'
  toml_repr={`[pytest]
timeout_maximum = <int>`}
  default_repr={`None`}
>

The maximum timeout (in seconds) that may be used on a `python_tests` target.

</Option>

### `version`

<Option
  cli_repr={`--pytest-version=<str>`}
  env_repr='PANTS_PYTEST_VERSION'
  toml_repr={`[pytest]
version = <str>`}
  default_repr={`pytest>=6.0.1,<6.3`}
>

Requirement string for Pytest.

</Option>

## Deprecated options

### `config`

<Option
  cli_repr={`--pytest-config=<file_option>`}
  env_repr='PANTS_PYTEST_CONFIG'
  toml_repr={`[pytest]
config = <file_option>`}
  default_repr={`None`}
  removal_version='2.6.0.dev0'
  removal_hint={'Pants now auto-discovers config files, so there is no need to set `[pytest].config` if `[pytest].config_discovery` is enabled (the default).'}
>

Path to pytest.ini or alternative Pytest config file.

</Option>

## Related subsystems

None

</span>
